Fix css overflow.

--- a/theme/assets-src/styles/docs-content.less
+++ b/theme/assets-src/styles/docs-content.less
@@ -160,7 +160,7 @@
 		padding: @p-sm @p-sm-x;
 		padding: @p-nm * @p-y @p-nm;
 		margin-bottom: @p-nm;
-		overflow-x: scroll;
+		overflow-x: auto;
 		border-radius: @corner-radius;
 		position: relative;
 		background: darken(@light-background, 1%);
