--- a/theme/assets-src/styles/sidebar.less
+++ b/theme/assets-src/styles/sidebar.less
@@ -52,7 +52,7 @@
 }
 
 .sidebar-toc {
-	overflow-y: scroll;
+	overflow-y: auto;
 	margin: 0 0 1px 0;
 	position: relative;
 }
